--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "stream-http": "^3.2.0",
     "util": "^0.12.5",
     "web-vitals": "^4.0.1"
   },
